# PhysicsSim

./: .gitignore  CMakeLists.txt
src/: AlignedAlloc.h  Main.cpp  Model.cpp  Renderer.cpp  Renderer.h  Triangle.h  Window.h
